# HEU_LAB02

./: README.md
p2-472175-472118/: autores.txt  requirements.txt
p2-472175-472118/Recursos/: alumnos.py
p2-472175-472118/parte1/: CSP-calls.csv  CSP-calls.sh  CSP-tests.sh  CSPParking.py  mini.csv  salida.csv  temp.py  todo.csv
p2-472175-472118/parte1/CSP-tests/: CSP-calls-test-10.csv  CSP-calls-test-11.csv  CSP-calls-test-2.txt  CSP-calls-test-4.txt  CSP-calls-test-5.csv  CSP-calls-test-6.csv  CSP-calls-test-6.txt  CSP-calls-test-8.csv  CSP-calls-test-8.txt
p2-472175-472118/parte1/test_calls/: CSP-calls-test-1.csv  CSP-calls-test-1.txt  CSP-calls-test-10.txt  CSP-calls-test-11.txt  CSP-calls-test-3.txt  CSP-calls-test-4.csv  CSP-calls-test-5.txt  CSP-calls-test-7.txt  CSP-calls-test-9.csv  CSP-calls-test-9.txt
p2-472175-472118/parte2/: ASTAR-calls.sh  CMakeLists.txt  ambulancia.py  astar  astar.cpp  borrame.py  gist.py  main.cpp
p2-472175-472118/parte2.0/: CMakeLists.txt  main  main.cpp
p2-472175-472118/parte2/C++Version/: A_star.cpp  A_star.h  Ambulance.cpp  Ambulance.h  CMakeLists.txt  Map_Reader.cpp  Map_Reader.h  Search.cpp  constants.h
p2-472175-472118/parte2/Intento/: main.cpp  main.py
p2-472175-472118/parte2/comandos_c++/: mapa-0.stats  mapa-1.output  mapa-1.stats  mapa-2.output  mapa-2.stats  mapa-3.output  mapa-3.stats  mapa.txt  mapa22.csv  rcomp.sh
p2-472175-472118/parte2/ollama/: code.py
